--- a/PAGES/01c_vscode/index.html
+++ b/PAGES/01c_vscode/index.html
@@ -2816,7 +2816,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Features and Keyboard Shortcuts</h2></p>
-<p>We present keyboard shortcuts and handy features for <a href="https://code.visualstudio.com/">VS Code</a>, which also apply to its privacy-focused alternative <a href="https://vscodium.com/">VS Codium</a>. Remarkably, these features are largely language-agnostic, holding regardless of the programming language you&#39;re working with. </p>
+<p>We present a few keyboard shortcuts and handy features for <a href="https://code.visualstudio.com/">VS Code</a>. They also apply to its privacy-focused alternative <a href="https://vscodium.com/">VS Codium</a>. Remarkably, these features are largely language-agnostic, holding regardless of the programming language you&#39;re working with. </p>
 <p>For visual illustration, the features discussed are accompanied by GIFs. To view these GIFs, simply click &quot;Example&quot;, or alternatively press  <kbd> Alt+🠙</kbd> or  <kbd> Alt+🠛</kbd> to open and close all of them simultaneously.</p>
 <div class="vscode_bullets"><p> <h4> To run a script </h4>  Select the script to be executed and press  <kbd> Ctrl+Enter</kbd>  <div> <details><summary> Example  </summary>
     <p> <img style="width:60%;height:60%;max-width:100%;" src="/julia_book/assets/PAGES/01c_vscode/pics/ex09.gif"/>
