--- a/PAGES/02d_strings/index.html
+++ b/PAGES/02d_strings/index.html
@@ -2816,7 +2816,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p>This section presents types for text representation, distinguishing between characters and strings. The coverage will be concise, as the website won&#39;t focus on string analysis. However, a minimum coverage is necessary as string variables are important for tasks like specifying paths, saving files, and other core functionalities. </p>
+<p>This section presents types for text representation, distinguishing between characters and strings. The coverage will be concise, as the website won&#39;t focus on string analysis. However, a minimal coverage is necessary as string variables are important for tasks like specifying paths, saving files, and other core functionalities. </p>
 <p>      </div>
     </div>
   </div>
@@ -2826,7 +2826,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Characters</h2> </p>
-<p>In Julia, the <code>Char</code> type is used to represent individual characters. A character <code>x</code> is introduced by using single quotes, as in <code>&#39;x&#39;</code>. Given its support for Unicode characters, <code>Char</code> encompasses not only numbers and letters, but also a wide range of symbols. This is shown below.</p>
+<p>In Julia, the <code>Char</code> type is used to represent individual characters. A character <code>x</code> is defined by using single quotes, as in <code>&#39;x&#39;</code>. Given its support for Unicode characters, <code>Char</code> encompasses not only numbers and letters, but also a wide range of symbols. This is shown below.</p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -2842,11 +2842,11 @@ y &#61; &#39;🐒&#39;</code></pre>
 <p></div></div> 
  </div></div>
 <p>  </p></details></div>
-<p>Notice that characters necessarily must be enclosed in single quotes <code>&#39; &#39;</code>, even for symbols like 🐒. Otherwise, Julia will interpret the expression as a variable.</p>
+<p>Notice that characters must be enclosed in single quotes <code>&#39; &#39;</code>, even for symbols like 🐒. Otherwise, Julia will interpret the expression as a variable.</p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
-    <button class="tablink first_tab active" data-id=""> Emojies </button>    
+    <button class="tablink first_tab active" data-id=""> Emojis </button>    
 </div><div data-id="" class="tabcontent active">
 <div class="code_in_modal"><div class="code_NoFormat"></p>
 <pre><code class="language-julia"># any character is allowed for defining a variable
@@ -2889,8 +2889,8 @@ x &#61; &quot;&quot;&quot;Hello, beautiful world&quot;&quot;&quot;</code></pre>
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>String Interpolation</h2> </p>
-<p><span style="color: rgb(62, 121, 180);"><strong>String interpolation</strong></span> allows you to embed expressions or variables within a string, and then evaluate those expressions or replace the variables with their values. </p>
-<p>To interpolate an expression into a string, you simply prefix it with the <code>&#36;</code> symbol. If the expression contains spaces, you&#39;ll need to enclose it in curly braces, like <code>&#36;&#40;&#41;</code>. Both cases are exemplified below.</p>
+<p><span style="color: rgb(62, 121, 180);"><strong>String interpolation</strong></span> allows you to embed Julia code within a string, which is then evaluated and replaced in the string with its value.</p>
+<p>To interpolate an expression, you must simply prefix the string with the <code>&#36;</code> symbol. If the expression contains spaces, you&#39;ll need to enclose it in curly braces, like <code>&#36;&#40;&#41;</code>. Both cases are exemplified below.</p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
