--- a/PAGES/02f_tuples/index.html
+++ b/PAGES/02f_tuples/index.html
@@ -2831,7 +2831,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Definition of Tuples</h2></p>
-<p>The syntax for accessing the  <em>i</em>-th element of a tuple <code>x</code> is similar to vectors, requiring <code>x&#91;i&#93;</code>. Instead, their definition requires enclosing its elements in parentheses <code>&#40;&#41;</code>, rather than the square brackets <code>&#91;&#93;</code> as in vectors.</p>
+<p>The syntax for accessing the  <em>i</em>-th element of a tuple <code>x</code> is <code>x&#91;i&#93;</code>, similar to vectors. For its part, defining tuples requires enclosing their elements in parentheses <code>&#40;&#41;</code>, which contrasts with the square brackets <code>&#91;&#93;</code> used in vectors.</p>
 <p>When tuples comprise more than one element, the use of <code>&#40;&#41;</code> is optional and its omission is in fact a common practice. On the contrary, single-element tuples have stricter syntax rules: you must use parentheses <code>&#40;&#41;</code> and a trailing comma <code>,</code> after the element. For example, a tuple with the single element <code>10</code> is represented as <code>&#40;10,&#41;</code>. This notation distinguishes a tuple from the expression <code>&#40;10&#41;</code>, which would simply be interpreted as the number 10.</p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
@@ -2862,7 +2862,7 @@ x &#61;  4,5,6           #alternative notation</code></pre>
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Tuples for Assignments</h2></p>
-<p>Tuples are particularly handy when you seek to assign values to multiple variables at the same time. This is achieved by using <strong>a tuple on the left-hand side of</strong> <code>&#61;</code> and <strong>a collection of objects on the right-hand side</strong>. The collection can be either another tuple or a vector. The following examples demonstrate both options.</p>
+<p>Tuples are particularly useful for simultaneously assigning values to multiple variables. This is achieved by placing <strong>a tuple on the left-hand side of</strong> <code>&#61;</code> and <strong>a collection on the right-hand side</strong> &#40;either another tuple or a vector&#41;. The following examples demonstrate both options.</p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -2884,7 +2884,7 @@ x &#61;  4,5,6           #alternative notation</code></pre>
 <p><div class="julia_repl_NoFormat"> <div class="julia_line">julia&gt</div> <code>y</code><br/><div class="akin_to_pre">5</div> </div></div> </div> 
  </div></div>
 <p>  </p></details></div>
-<p>As we&#39;ll see, this technique is commonly employed when a function returns multiple values. Through a single concise statement, the approach enables you to unpack the returned values into individual variables.</p>
+<p>As we&#39;ll see later, this technique is commonly employed when a function returns multiple values, enabling you to unpack the returned values into individual variables.</p>
 <p>      </div>
     </div>
   </div>
