--- a/PAGES/04c_conditionals/index.html
+++ b/PAGES/04c_conditionals/index.html
@@ -2816,7 +2816,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p>Programs routinely execute different operations based on their flow. To handle these scenarios, they must adapt their operations accordingly. Conditional statements provide this capability by enabling the contingent execution of code blocks. </p>
+<p>Programs routinely perform different operations depending on their execution flow. To handle these possibilities, programs rely on conditional statements, which enable the execution of specific code blocks only when certain conditions are met.</p>
 <p>Each code block of a conditional statement is referred to as a <span style="color: rgb(62, 121, 180);"><strong>branch</strong></span>. Based on the number of branches, there are three types of conditional statements:</p>
 <div class="itemNoSpace"><ul>
 <li><p><span style="color: rgb(62, 121, 180);"><strong>if-then statements</strong></span>, which consist of a <strong>single branch</strong>. They run a specific operation only if a condition is met, with no operation performed otherwise.</p>
