--- a/PAGES/04d_forloops/index.html
+++ b/PAGES/04d_forloops/index.html
@@ -2816,8 +2816,8 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p>A key feature of programming is its ability to automate repetitive tasks, with <span style="color: rgb(62, 121, 180);"><strong>for-loops</strong></span> being crucial for this purpose. They let you execute the same block of code repeatedly, treating each element of a list as a different input.</p>
-<p>While for-loops are a fundamental construct in every programming language, their importance is especially pronounced in Julia: unlike other languages &#40;e.g., Matlab, Python, and R&#41;, which often discourage for-loops in performance-critical code, Julia relies on them to achieve high performance.</p>
+<p>A key feature of programming is its ability to automate repetitive tasks, making <span style="color: rgb(62, 121, 180);"><strong>for-loops</strong></span> play a crucial role in coding. They let you execute the same block of code repeatedly, treating each element in a list as a different input.</p>
+<p>While for-loops are fundamental in every programming language, their importance is especially pronounced in Julia: unlike other languages &#40;e.g., Matlab, Python, and R&#41;, which often discourage for-loops in performance-critical code, Julia relies on them to achieve high performance.</p>
 <p>The role of for-loops in optimizing performance will be explored in Part II. Here, we’ll primarily introduce the tool itself, focusing on its syntax, constructions, and common iteration techniques.</p>
 <p>      </div>
     </div>
@@ -2916,10 +2916,10 @@ end</code></pre>
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Iterating over Indices</h2></p>
-<p>So far, we&#39;ve considered a simple list like <code>&#91;&quot;hello&quot;, &quot;beautiful&quot;, &quot;world&quot;&#93;</code> to illustrate how for-loops work. In real applications, however, manually specifying each element in a list is impractical. When a list follows a predictable pattern &#40;e.g., a sequence of numbers&#41;, we can simplify the process by describing the pattern used to generate those elements.</p>
-<p>Building on this insight, we&#39;ll next explore how to define ranges. They let users define a sequence of numbers, becoming particularly useful to access elements of a collection through their indices. </p>
+<p>So far, we&#39;ve considered a simple list like <code>&#91;&quot;hello&quot;, &quot;beautiful&quot;, &quot;world&quot;&#93;</code> to demonstrate how for-loops work. In real applications, however, manually specifying each element in a list is impractical. Fortunately, when a list follows a predictable pattern &#40;e.g., a sequence of numbers&#41;, we can simply describe the pattern that generates those elements.</p>
+<p>Building on this insight, we&#39;ll next explore how to define ranges. They let users define a sequence of numbers, which is particularly useful to access elements of a collection through their indices. </p>
  <h4> Ranges </h4>
-<p><span style="color: rgb(62, 121, 180);"><strong>Ranges</strong></span> in Julia are defined using the syntax <code>&lt;begin&gt;:&lt;steps&gt;:&lt;end&gt;</code>, where <code>&lt;begin&gt;</code> represents the starting index and <code>&lt;end&gt;</code> the ending index. Likewise, <code>&lt;steps&gt;</code> sets the increment between values, defaulting to one when the term is omitted. We can also reverse the order of the sequence, by providing a negative value for <code>&lt;steps&gt;</code>. All this is demonstrated below.</p>
+<p><span style="color: rgb(62, 121, 180);"><strong>Ranges</strong></span> in Julia are defined via the syntax <code>&lt;begin&gt;:&lt;steps&gt;:&lt;end&gt;</code>, where <code>&lt;begin&gt;</code> represents the starting index and <code>&lt;end&gt;</code> the ending index. Likewise, <code>&lt;steps&gt;</code> sets the increment between values, defaulting to one when the term is omitted. We can also reverse the order of the sequence, by providing a negative value for <code>&lt;steps&gt;</code>. All this is demonstrated below.</p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -2964,7 +2964,7 @@ end</code></pre>
 <p>  </p></details></div>  </div>  </div>
  <h4> Iterating over Indices of an Array </h4>
 <p>Ranges can be employed to access elements of a collection. When combined with a for-loop, it makes it possible to apply the same code block to each element of a vector.</p>
-<p>Specifically, the expression <code>1:length&#40;x&#41;</code>, where <code>length&#40;x&#41;</code> returns the number of elements in <code>x</code>, allows iteration over all indices of a vector <code>x</code>. The same functionality can be achieved with the function <code>eachindex&#40;x&#41;</code>. In fact, this is the recommended approach for iterating over all elements, as it returns an iterator optimized for each specific iterable object.</p>
+<p>Specifically, the expression <code>1:length&#40;x&#41;</code>, where <code>length&#40;x&#41;</code> returns the number of elements in <code>x</code>, allows iteration over all indices of a vector <code>x</code>. The same functionality can be achieved with the function <code>eachindex&#40;x&#41;</code>. In fact, this is the recommended approach for iterating over all elements, as it returns an iterator optimized for each iterable object.</p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
