--- a/PAGES/01a_installation/index.html
+++ b/PAGES/01a_installation/index.html
@@ -2816,7 +2816,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p>We start by covering the essential steps to install Julia and VS Code. The latter is a code editor to write and execute code in multiple languages, visualize results, and leverage extensions that simplify the coding experience. We&#39;ll conclude by providing some valuable online resources for Julia&#39;s users.</p>
+<p>We start by covering the essential steps to install Julia and VS Code. The latter is a code editor to write and execute code in multiple languages. We&#39;ll conclude by providing some valuable online resources for Julia&#39;s users.</p>
 <p>      </div>
     </div>
   </div>
@@ -2838,7 +2838,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Installing VS Code</h2></p>
-<p>Once Julia is installed, you&#39;ll need an editor to write scripts and view outputs. There are numerous alternatives in this respect. <strong>Our website supposes that you use</strong> <a href="https://code.visualstudio.com/"><strong>Visual Studio Code</strong></a> <strong>(aka VS Code)</strong>, which is free, officially supported by Julia, and runs on any operating system &#40;i.e., Windows, macOS, and Linux&#41;. One of the key benefits of VS Code is the possibility of installing plugins to extend the editor&#39;s capabilities. In fact, you&#39;ll need to add the  <em>Julia Language Support</em> plugin for running Julia.</p>
+<p>Once Julia is installed, you&#39;ll need an editor to write scripts and visualize outputs. There are numerous alternatives in this respect. <strong>Our website supposes that you use</strong> <a href="https://code.visualstudio.com/"><strong>Visual Studio Code</strong></a> <strong>(aka VS Code)</strong>, which is free, officially supported by Julia, and runs on any operating system &#40;i.e., Windows, macOS, and Linux&#41;. One of the key benefits of VS Code is the possibility of installing plugins to extend the editor&#39;s capabilities. In fact, you&#39;ll need to add the  <em>Julia Language Support</em> plugin for running Julia.</p>
  <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px; padding-right:0.4em;"><strong>Privacy-Oriented Version of VS Code</strong>  </span>  </div>  <div class=content>     VS Code is open-source software created and maintained by Microsoft. If you want a more private alternative that disables telemetry and tracking, <a href="https://vscodium.com/"><strong>VS Codium</strong></a> is a re-built of VS Code.  </div>  </div>
 <p>Links to other popular editors can be found on <a href="/julia_book/links/">Useful Links</a>, including Vim, Emacs, NotePad, and Sublime. These editors are officially supported by Julia &#40;except Sublime&#41;. I strongly recommend getting proficient in either VS Code or one of these alternatives. This will allow you <strong>to master a single tool for coding in multiple programming languages</strong>.</p>
@@ -2876,8 +2876,8 @@ this is invisible this is invisible this is invisible this is invisible this is 
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Installing R and Python (<strong><i style="color:red">OPTIONAL</i></strong>)</h2></p>
-<p>Julia offers seamless integration with other programming languages like R and Python, allowing you to export data to these languages from Julia, perform specific operations, and then import the results back into Julia. This interoperability is particularly useful when a desired function is only available in one of them.</p>
-<p>For those familiar with R and Python, <a href="https://docs.julialang.org/en/v1/manual/noteworthy-differences/">this note</a> outlines noteworthy differences between these languages and Julia. Additionally, a quick reference on syntax differences among Matlab, Python, and Julia is provided on this <a href="https://cheatsheets.quantecon.org/">cheat sheet</a>.</p>
+<p>Julia offers a seamless integration with other programming languages like R and Python, allowing you to export data from Julia, perform specific operations, and then import the results back into Julia. This interoperability is particularly useful when a desired function is only available in one of these languages.</p>
+<p>For those familiar with R and Python, <a href="https://docs.julialang.org/en/v1/manual/noteworthy-differences/">this note</a> outlines some noteworthy differences with respect to Julia. Additionally, this <a href="https://cheatsheets.quantecon.org/">cheat sheet</a> provides a quick reference on syntax differences among Matlab, Python, and Julia.</p>
 <p>      </div>
     </div>
   </div>
