--- a/PAGES/02c_scalars/index.html
+++ b/PAGES/02c_scalars/index.html
@@ -2826,8 +2826,8 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Numbers</h2></p>
-<p>Computers store numbers in different formats, treating integers and decimal numbers as separate entities. Even within the same category of numbers, multiple representations emerge, depending on the intended level of precision. This precision is determined by the number of bits allocated in memory to store it, which in turn defines the maximum range of values supported by a data type. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> For instance, the so-called 8-bit integer is limited to representing values between –128 to 127. Likewise, a 32-bit floating-point number, which is used for decimal numbers, can represent up to 7 significant digits of precision.  </span></span> The features described extend well beyond Julia, and are intrinsic to how computers operate at a fundamental level. </p>
-<p>In modern computers, numbers typically have a default size of 64 bits. Specifically in Julia, the default types for numbers are:</p>
+<p>Computers store numbers in various formats, treating integers and decimal numbers as separate entities. Even within each category of numbers, multiple representations emerge depending on the intended level of precision. This precision is determined by the number of bits allocated to store values in memory, which in turn defines the maximum range of values that a data type supports. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> For instance, 8-bit integers can only represent values between -128 to 127. Likewise, 32-bit floating-point numbers, used for decimal numbers, can represent up to 7 significant digits of precision.  </span></span> The representation just described extends well beyond Julia, and is intrinsic to how computers operate at a fundamental level. </p>
+<p>In modern computers, numbers typically have a default size of 64 bits, and Julia&#39;s default types for numbers are:</p>
 <ul>
 <li><p><code>Int64</code> for integers.</p>
 </li>
@@ -2836,7 +2836,7 @@ color: white;
 </ul>
  <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
-      <b> Remark</b> </span>  </div>  <div class=content>     Julia provides the type <code>Int</code> as a more versatile option than <code>Int64</code>, which adapts to your computer&#39;s architecture: <code>Int</code> defaults to <code>Int64</code> on 64-bit systems and <code>Int32</code> on 32-bit systems. Since most modern machines operate on a 64-bit architecture, <code>Int</code> typically defaults to Int64. Note that there&#39;s no equivalent type <code>Float</code> for floating-point numbers, with Julia always defaulting to <code>Float64</code>.  </div>  </div>
+      <b> Remark</b> </span>  </div>  <div class=content>     Julia provides the type <code>Int</code> as a more versatile option than <code>Int64</code>, which adapts to your computer&#39;s architecture: <code>Int</code> defaults to <code>Int64</code> on 64-bit systems and <code>Int32</code> on 32-bit systems. Since most modern machines operate on a 64-bit architecture, <code>Int</code> typically defaults to <code>Int64</code>. Note that there&#39;s no equivalent type <code>Float</code> for floating-point numbers, with Julia always defaulting to <code>Float64</code>.  </div>  </div>
 <p>It&#39;s worth emphasizing that <code>Int64</code> and <code>Float64</code> are two different data types.  Thus, while <code>1</code> is a value with type <code>Int64</code>, the same value becomes <code>1.0</code> as a <code>Float64</code> type.</p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
