--- a/PAGES/02e_arrays/index.html
+++ b/PAGES/02e_arrays/index.html
@@ -2828,7 +2828,7 @@ color: white;
 </li>
 </ul>
 <p><span style="color: rgb(62, 121, 180);"><strong>Arrays</strong></span> represent one of the most common data structure for collections. They are formally defined as objects with type <code>Array&#123;T,d&#125;</code>, where <code>d</code> is the array&#39;s dimension and <code>T</code> is its elements&#39; type &#40;e.g., <code>Int64</code> or <code>Float64</code>&#41;.</p>
-<p>Two special types of arrays are <span style="color: rgb(62, 121, 180);"><strong>vectors</strong></span> &#40;1-dimensional arrays&#41; and <span style="color: rgb(62, 121, 180);"><strong>matrices</strong></span> &#40;2-dimensional arrays&#41;. Specifically, the type <code>Vector&#123;T&#125;</code> is an alias for <code>Array&#123;T,1&#125;</code>, whereas <code>Matrix&#123;T&#125;</code> is an alias for <code>Array&#123;T,2&#125;</code>. We include a section about matrices, although this is optional since our website will concentrate almost exclusively on vectors, which are sufficient for explaining Julia&#39;s fundamentals.</p>
+<p>Two special categories of arrays are <span style="color: rgb(62, 121, 180);"><strong>vectors</strong></span> &#40;1-dimensional arrays&#41; and <span style="color: rgb(62, 121, 180);"><strong>matrices</strong></span> &#40;2-dimensional arrays&#41;. Vectors are represented by the type <code>Vector&#123;T&#125;</code>, which is an alias for <code>Array&#123;T,1&#125;</code>. For its part, matrices use the type <code>Matrix&#123;T&#125;</code>, which is an alias for <code>Array&#123;T,2&#125;</code>. Although we provide a subsection about matrices at the end, this is labeled as optional. The reason is that vectors are sufficient for conveying the topics of this website.</p>
  <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
       <b> Remark</b> </span>  </div>  <div class=content> <strong>Julia uses 1 as an array's first index</strong>. This contrasts with many other languages &#40;e.g., Python&#41;, where 0 is used as the first index.  </div>  </div>
@@ -2841,7 +2841,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Vectors</h2></p>
-<p><strong>Vectors</strong> in Julia are defined as  <em>column-vectors</em>. Their elements are separated by a comma or a semicolon. </p>
+<p><strong>Vectors</strong> in Julia are defined as  <em>column-vectors</em>, and their elements are separated by a comma or a semicolon. </p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -2863,7 +2863,7 @@ x &#61; &#91;1; 2; 3&#93;          # equivalent notation to define &#96;x&#96;</
       <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
       <b> Remark</b> </span>  </div>  <div class=content>     Arrays can hold elements of various types, such as numbers and strings. For example, <code>&#91;1, 2.5, &quot;Hello&quot;&#93;</code> is a valid vector in Julia, identifying its elements as having type <code>Any</code> &#40;recall that <code>Any</code> encompasses all the possible types supported by Julia&#41;. While arrays mixing types can be created, they&#39;re highly discouraged for several reasons, including performance.  </div>  </div>
  <h4> Accessing a Vector&#39;s Elements </h4>
-<p>Given a vector <code>x</code>, we can access its  <em>i</em>-th element through the syntax <code>x&#91;i&#93;</code>. Additionally, we can access all the elements of <code>x</code> through the syntax <code>x&#91;:&#93;</code>.</p>
+<p>Given a vector <code>x</code>, we can access its  <em>i</em>-th element with <code>x&#91;i&#93;</code> and retrieve all its elements with <code>x&#91;:&#93;</code>.</p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -2883,7 +2883,7 @@ x &#61; &#91;1; 2; 3&#93;          # equivalent notation to define &#96;x&#96;</
  6</div> </div></div> </div> 
  </div></div>
 <p>  </p></details></div>
-<p>It&#39;s also possible to access a subset of elements. The approaches to doing this are multiple, and next we&#39;ll present two basic ways to do it.  The simplest method is by establishing the indices <strong>through a vector</strong>, whose syntax is <code>x&#91;&lt;vector&gt;&#93;</code>.</p>
+<p>It&#39;s also possible to access a subset of <code>x</code>&#39;s elements. There are several approaches to achieve this, and we&#39;ll only present two basic ones at this point.  The simplest method involves setting the indices <strong>via a vector</strong>, using the syntax <code>x&#91;&lt;vector&gt;&#93;</code>.</p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -2902,7 +2902,7 @@ x &#61; &#91;1; 2; 3&#93;          # equivalent notation to define &#96;x&#96;</
 <p><div class="julia_repl_NoFormat"> <div class="julia_line">julia&gt</div> <code>x&#91;1,3&#93;</code> # be careful&#33; this is the notation used for matrices, indicating &#39;x&#91;row 1, column 3&#93;&#39;<br/><div class="akin_to_pre"><span style="color: rgb(168, 50, 50); padding-left:-1px"><strong>ERROR</strong></span>: BoundsError: attempt to access 5-element Vector{Int64} at index [1, 3]</div> </div></div> </div> 
  </div></div>
 <p>  </p></details></div>
-<p>The second approach is by establishing the indices through a <strong>range</strong>. Ranges are denoted as <code>&lt;first&gt;:&lt;steps&gt;:&lt;last&gt;</code>, with Julia assuming increments of one if we omit <code>&lt;steps&gt;</code>. The first and last index in a range can be expressed respectively through the keywords <code>begin</code> and <code>end</code>.</p>
+<p>The second approach sets the indices <strong>via ranges</strong>. These are denoted as <code>&lt;first&gt;:&lt;steps&gt;:&lt;last&gt;</code>, with Julia assuming increments of one if we omit <code>&lt;steps&gt;</code>. To respectively express the first and last index in a range, you can use the keywords <code>begin</code> and <code>end</code>.</p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -2963,7 +2963,7 @@ Y &#61; &#91;1 2 3&#93;           #&#61; row-vector &#40;defined without commas&
  </div></div>
 <p>  </p></details></div>
  <h4> Accessing a Matrix&#39;s Elements </h4>
-<p>Given a matrix <code>X</code>, we can access <code>x</code>&#39;s element at row <code>r</code> and column <code>c</code> by <code>X&#91;r,c&#93;</code>. For the case of a row vector, we can access its i-th element by <code>X&#91;i&#93;</code>. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> We could also use this approach for any matrix, as Julia also accepts a linear index for matrices. For instance, a 3x3 matrix accepts indices between 1 and 9. However, except that you want to iterate over all elements of a matrix, the notation <code>X&#91;r,c&#93;</code> is easier to interpret.  </span></span>  Moreover, we can select all elements across the row <code>r</code> by <code>X&#91;r,:&#93;</code>, and all elements of column <code>c</code> by <code>X&#91;:,c&#93;</code>. </p>
+<p>Given a matrix <code>X</code>, we can access its element at row <code>r</code> and column <code>c</code> by <code>X&#91;r,c&#93;</code>. Likewise, the i-th element of a row vector is accessed with <code>X&#91;i&#93;</code>. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> We could also use this approach for any matrix, as Julia also accepts a linear index for matrices. For instance, a 3x3 matrix accepts indices between 1 and 9. However, except that you want to iterate over all elements of a matrix, the notation <code>X&#91;r,c&#93;</code> is easier to interpret.  </span></span>  Moreover, we can select all elements across the row <code>r</code> by <code>X&#91;r,:&#93;</code>, and all elements of column <code>c</code> by <code>X&#91;:,c&#93;</code>. </p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -2987,7 +2987,7 @@ Y &#61; &#91;4 5 6&#93;     # row-vector</code></pre>
 <p><div class="julia_repl_NoFormat"> <div class="julia_line">julia&gt</div> <code>Y&#91;2&#93;</code><br/><div class="akin_to_pre">5</div> </div></div> </div> 
  </div></div>
 <p>  </p></details></div>
-<p>Accessing a subset of elements is possible through the same approaches as for vectors, now applied to either rows or columns.</p>
+<p>To access a subset of elements, you must follow the same approaches as with vectors, but applied to either rows or columns.</p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
